--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: #0d1117;
-  /* font-family: 'Inter', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
+  font-family: 'Inter', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
   display: flex;
   flex-direction: column;
